option('mit-ext', type : 'boolean', value : true, description : 'MIT-SCREEN-SAVER extension support')
option('dpms-ext', type : 'boolean', value : true, description : 'DPMS extension support')
option('xf86gamma-ext', type : 'boolean', value : true, description : 'XFree86 gamma fading support')
option('systemd', type : 'boolean', value : true, description : 'Systemd support')
option('upower', type : 'boolean', value : true, description : 'UPower support')
option('late-locking', type : 'boolean', value : true, description : 'Late locking support')
option('lock-on-suspend', type : 'boolean', value : true, description : 'Lock on suspend')
option('lock-on-lid', type : 'boolean', value : true, description : 'Lock on lid')
option('gsettings', type : 'boolean', value : true, description : 'Store command options using GSettings')
